# OpenDart-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
notebooks/: test.ipynb  test.py
src/dart_mcp/: __init__.py
src/dart_mcp/api_clients/base/: dart.py
src/dart_mcp/api_clients/dart/corp_list/: __init__.py  const.py
src/dart_mcp/api_clients/dart/debt_info/: __init__.py  const.py  mapping.py  module.py
src/dart_mcp/api_clients/dart/financial_stmt/: __init__.py  const.py  mapping.py  module.py
src/dart_mcp/api_clients/dart/financial_stmt_list/: __init__.py  const.py  module.py
src/dart_mcp/api_clients/dart/helper/: __init__.py  const.py  fetch_corp_list.py
src/dart_mcp/api_clients/dart/investment_info/: __init__.py  const.py  module.py
src/dart_mcp/api_clients/dart/people_info/: __init__.py  const.py  mapping.py  module.py
src/dart_mcp/api_clients/dart/stock_info/: __init__.py  const.py  mapping.py  module.py
src/dart_mcp/db/: __init__.py  sqlite.py
src/dart_mcp/db/schema/: __init__.py  dart_corp_list.py
src/dart_mcp/settings/: config.py  startup.py
src/dart_mcp/tools/: __init__.py  find_company_by_name.py  get_company_financial_stmt_list.py  get_debt_summary.py  get_financial_stmt.py  get_investment_summary.py  get_people_summary.py  get_stock_summary.py
