[project]
name = "mcp-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "jp-kh-kim", email = "khkim@braincommerce.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "xmltodict>=0.14.2",
]

[project.scripts]
dart-mcp = "dart_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dart_mcp"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203", "E501"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest-pretty>=1.2.0",
]
